src/test/errors/if_condition.j
class Main {

Void main(){
    Int i; Int j; String cond;
    Int ir;
    String sr;
    if (i) {
        j = 1;
    }
    else {
        j = 2;
    }
    while (cond + "b") { cond = cond + "a"; }
}
}